# Pinshot-SVC

./: Cargo.toml  LICENSE  README.md  local.settings.json
.github/workflows/: azure-static-web-apps-jolly-pond-042f33f10.yml
src/: avx-quelle.pest  main.rs  quelle.pest
website/: index.html  project.mobirise
website/assets/images/: hashes.json
website/assets/mobirise/css/: mbr-additional.css
website/assets/theme/js/: script.js
