[package]
name = "handler"
version = "0.1.0"
authors = ["Kevin Wonus <kevin@wonus.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# warp = "0.3"
axum = "0.6.6"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
serde = { version = "1.0.152", features = ["derive"] }
tracing-subscriber = { version = "0.3", default-features = true }
pest = "2.1.3"
pest_derive = "2.1.0"
cargo-expand = "1.0.40"
